# ZINA_Blockchain

./: .gitignore  AllTransactions.h  Balances.cpp  Balances.h  Block.cpp  Block.h  BlockChain.cpp  BlockChain.h  BranchingChain.cpp  BranchingChain.h  CMakeLists.txt  CPKey.cpp  Coinbase.cpp  Coinbase.h  Console_interface.cpp  Constants.h  Hash.cpp  Hash.h  Miner.cpp  Miner.h  README.md  Transaction.cpp  Transaction.h  User.cpp  User.h  UserInterface.cpp  UserInterface.h  UserInterface.ui  VerifiedChain.cpp  VerifiedChain.h  ZINA.cpp  ZINA.h  addtransactiondialog.cpp  addtransactiondialog.h  addtransactiondialog.ui  block_test.cpp  blockchain_test.cpp  boost.cpp  builder.sh  cleaner.sh  (+21 more)
UML-diagram/: UML_1st_iteration.drawio
ZINA_QT/: UserInterface.cpp  UserInterface.h  UserInterface.ui
include/: AllTransactions.h  Balances.h  Block.h  BlockChain.h  BranchingChain.h  CPKey.h  Coinbase.h  Hash.h  Miner.h  Transaction.h  User.h  VerifiedChain.h  ZINA.h  constants.h  hash_functions.h
